# Face-Recognition-Attendance-System-using-Deep-Learning-and-IoT

./: README.md  app.py  attendance_system.db  database.py  face_recognition_utils.py  pyproject.toml  report_generator.py  requirements.txt  telegram_utils.py
pages/: 1_Student_Enrollment.py  2_Take_Attendance.py  3_View_Reports.py  4_Settings.py
